Entity explorer form added

--- a/vba-files/Class/clsEntityType.cls
+++ b/vba-files/Class/clsEntityType.cls
@@ -5,7 +5,7 @@ END
 Attribute VB_Name = "clsEntityType"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
-Attribute VB_PredeclaredId = False
+Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = False
 Option Compare Database
 Option Explicit
@@ -13,11 +13,11 @@ Option Explicit
 Private mID As Double
 Private mName As String
 
-Public Property Get id() As Double
-    id = mID
+Public Property Get ID() As Double
+    ID = mID
 End Property
 
-Public Property Let id(ByVal vNewValue As Double)
+Public Property Let ID(ByVal vNewValue As Double)
     mID = vNewValue
 End Property
 
@@ -29,3 +29,9 @@ Public Property Let Name(ByVal vNewValue As String)
     mName = vNewValue
 End Property
 
+Public Function Create(entityTypeId As Double, detailName As String) As clsEntityType
+    Dim result As New clsEntityType
+    result.ID = entityTypeId
+    result.Name = detailName
+    Set Create = result
+End Function
