--- a/vba-files/Class/clsDetail.cls
+++ b/vba-files/Class/clsDetail.cls
@@ -5,19 +5,20 @@ END
 Attribute VB_Name = "clsDetail"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
-Attribute VB_PredeclaredId = False
+Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = False
 Option Compare Database
 Option Explicit
 
 Private mID As Double
 Private mName As String
+Private mTableName As String
 
-Public Property Get id() As Double
-    id = mID
+Public Property Get ID() As Double
+    ID = mID
 End Property
 
-Public Property Let id(ByVal vNewValue As Double)
+Public Property Let ID(ByVal vNewValue As Double)
     mID = vNewValue
 End Property
 
@@ -29,8 +30,18 @@ Public Property Let Name(ByVal vNewValue As String)
     mName = vNewValue
 End Property
 
-Public Function Create(detailId As Double, detailName As String) As clsDetail
-    mID = detailId
-    mName = detailName
-    Set Create = Me
+Public Property Get tableName() As String
+    tableName = mTableName
+End Property
+
+Public Property Let tableName(ByVal vNewValue As String)
+    mTableName = vNewValue
+End Property
+
+Public Function Create(detailId As Double, detailName As String, tableName As String) As clsDetail
+    Dim result As New clsDetail
+    result.ID = detailId
+    result.Name = detailName
+    result.tableName = tableName
+    Set Create = result
 End Function
