Before After fields for sfrmDetails

--- a/vba-files/Class/clsDetail.cls
+++ b/vba-files/Class/clsDetail.cls
@@ -23,6 +23,14 @@ Public Property Get Self() As clsDetail
     Set Self = Me
 End Property
 
+Public Property Get ID() As Double
+    ID = This.ID
+End Property
+
+Public Property Get Name() As String
+    Name = This.Name
+End Property
+
 Private Property Get IThing_ID() As Double
     IThing_ID = This.ID
 End Property
