--- a/vba-files/Class/clsEntity.cls
+++ b/vba-files/Class/clsEntity.cls
@@ -15,11 +15,24 @@ Implements IThing
 Private Type TEntity
     ID As Double
     Name As String
+    EntityType As Double
 End Type
 Private This As TEntity
 
 Public Property Get Self() As clsEntity
     Set Self = Me
+End Property
+
+Public Property Get ID() As Double
+    ID = This.ID
+End Property
+
+Public Property Get Name() As String
+    Name = This.Name
+End Property
+
+Public Property Get EntityType() As Double
+    EntityType = This.EntityType
 End Property
 
 Private Property Get IThing_ID() As Double
@@ -36,6 +49,10 @@ End Property
 
 Public Property Let Name(ByVal vNewValue As String)
     This.Name = vNewValue
+End Property
+
+Public Property Let EntityType(ByVal vNewValue As Double)
+    This.EntityType = vNewValue
 End Property
 
 
