--- a/vba-files/Class/clsDetail.cls
+++ b/vba-files/Class/clsDetail.cls
@@ -14,8 +14,8 @@ Implements IThing
 
 Private Type TDetail
  ID As Double
- Name As String
- tableName As String
+ name As String
+ TableName As String
 End Type
 Private This As TDetail
 
@@ -27,8 +27,8 @@ Public Property Get ID() As Double
     ID = This.ID
 End Property
 
-Public Property Get Name() As String
-    Name = This.Name
+Public Property Get name() As String
+    name = This.name
 End Property
 
 Private Property Get IThing_ID() As Double
@@ -36,22 +36,22 @@ Private Property Get IThing_ID() As Double
 End Property
 
 Private Property Get IThing_Name() As String
-    IThing_Name = This.Name
+    IThing_Name = This.name
 End Property
 
-Public Property Get tableName() As String
-    tableName = This.tableName
+Public Property Get TableName() As String
+    TableName = This.TableName
 End Property
 
 Public Property Let ID(ByVal vNewValue As Double)
     This.ID = vNewValue
 End Property
 
-Public Property Let Name(ByVal vNewValue As String)
-    This.Name = vNewValue
+Public Property Let name(ByVal vNewValue As String)
+    This.name = vNewValue
 End Property
 
-Public Property Let tableName(ByVal vNewValue As String)
-    This.tableName = vNewValue
+Public Property Let TableName(ByVal vNewValue As String)
+    This.TableName = vNewValue
 End Property
 
