--- a/vba-files/Class/clsEventTest.cls
+++ b/vba-files/Class/clsEventTest.cls
@@ -13,7 +13,7 @@ Option Explicit
 Private Enum RAGColors
     Default = 16777215
     Red = 13421823
-    Yellow = 13431551
+    yellow = 13431551
     green = 14282978
 End Enum
 
@@ -27,9 +27,9 @@ Public Property Set SetTextbox(textbox As Access.textbox)
 End Property
 
 Private Sub tb_Change()
-    Debug.Print tb.Parent.Name & "!" & tb.Name & "_Change()"
+    Debug.Print tb.Parent.name & "!" & tb.name & "_Change()"
     Dim tbBefore As textbox
-    Set tbBefore = tb.Parent.Controls(Replace(tb.Name, "txtAfter", "txtBefore"))
+    Set tbBefore = tb.Parent.Controls(Replace(tb.name, "txtAfter", "txtBefore"))
     If CStr(tbBefore) <> CStr(tb) Then
         Debug.Print "Differs"
         Debug.Print "   " & CStr(tbBefore)
@@ -42,9 +42,9 @@ End Sub
 
 
 Private Sub tb_Exit(Cancel As Integer)
-    Debug.Print tb.Parent.Name & "!" & tb.Name & "_Exit()"
+    Debug.Print tb.Parent.name & "!" & tb.name & "_Exit()"
     Dim tbBefore As textbox
-    Set tbBefore = tb.Parent.Controls(Replace(tb.Name, "txtAfter", "txtBefore"))
+    Set tbBefore = tb.Parent.Controls(Replace(tb.name, "txtAfter", "txtBefore"))
     If CStr(tbBefore) <> CStr(tb) Then
         tb.BackColor = RAGColors.Red
     Else
